feat: improve recommendation endpoint